Use #collect instead of Java16 #toList